ec2.tf
# EC2 Instance
resource "aws_instance" "worker" {
  ami                    = var.ec2_ami
  instance_type          = var.ec2_instance_type
  subnet_id              = aws_subnet.public[0].id
  vpc_security_group_ids = [aws_security_group.ec2.id]
  iam_instance_profile   = aws_iam_instance_profile.ec2.name
  key_name               = var.key_pair_name

  root_block_device {
    volume_size           = var.ec2_volume_size
    volume_type           = "gp2"
    encrypted             = true
    delete_on_termination = true
  }

  user_data = base64encode(templatefile("${path.module}/user_data.sh", {
    secret_arn = aws_secretsmanager_secret.db_credentials.arn
    aws_region = var.aws_region
  }))

  tags = {
    Name        = "${var.app_name}-worker"
    Environment = var.environment
  }

  depends_on = [aws_secretsmanager_secret_version.db_credentials]
}
